kustomizations/home-assistant/frigate/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frigate
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
      name: http
    - port: 8554
      targetPort: 8554
      name: rtsp
  selector:
    app: frigate
