kustomizations/home-assistant/frigate/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frigate
spec:
  rules:
  - host: frigate.lan
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frigate
              port:
                number: 5000
